# uncertainty_modeller

./: .appveyor.yml  .gitignore  .isort.cfg  .scrutinizer.yml  .travis.yml  .verchew.ini  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  scent.py
docs/: advanced.md
docs/about/: contributing.md  license.md
tests/: conftest.py  test_cli.py
uncertainty_classification_wrapper/: classifier_uncertainty.py
uncertainty_classification_wrapper/examples/: Uncertainty Wrapper Example (20 newsgroups to BBC news).ipynb  newsgroups_2_politics_example.py
uncertainty_classification_wrapper/tests/: test_classifier_uncertainty.py
uncertainty_modeler/: __init__.py  __main__.py
uncertainty_modeler/examples/: newsgroups_2_politics_example.py
uncertainty_modeler/models/: dirichlet_wrapper.py
uncertainty_modeler/tests/: test_utils.py
uncertainty_wrapper/: classifier_uncertainty.py
uncertainty_wrapper/tests/: test_classifier_uncertainty.py
uncwrap/: classifier_uncertainty.py  cli.py
uncwrap/examples/: Uncertainty Wrapper Example (20 newsgroups to BBC news).ipynb  Uncertainty_Toy_problem_3classes.ipynb  Uncertainty_Toy_problem_3classes_OOD.ipynb  newsgroups_2_politics_example.py
uncwrap/tests/: test_classifier_uncertainty.py
