[tool.poetry]

name = "uncwrap"
version = "0.2"
description = "Sklearn wrapper for classifications system that computes the prediction uncertainty"

license = "MIT"

authors = ["José Mena <menajosep@gmail.com>"]

readme = "README.md"

homepage = "https://github.com/menajosep/uncertainty_modeller"
documentation = "https://github.com/menajosep/uncertainty_modeller/README.md"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
]

[tool.poetry.dependencies]

python = "^3.6.1"

# TODO: Remove these and add your library's requirements
click = "^7.0"
minilog = "^1.5"
numpy = "^1.19.2"
scipy = "^1.5.2"
scikit-learn = "^0.23.2"
tensorflow = "1.15.2"
tensorflow-probability = "0.7.0"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]

# Linters
pydocstyle = "*"

# Testing
pytest = "^5.3.2"
pytest-cov = "*"
pytest-describe = { git = "https://github.com/pytest-dev/pytest-describe", rev = "453aa9045b265e313f356f1492d8991c02a6aea6" } # use 2.0 when released
pytest-expecter = "^2.1"
pytest-random = "*"
freezegun = "*"

# Reports
coveragespace = "^3.1.1"

# Documentation
mkdocs = "~1.0"
pygments = "^2.5.2"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
ipython = "^7.12.0"

[tool.poetry.scripts]

UncertaintyModeler = "uncertainty_classification_wrapper.cli:main"

[tool.black]

target-version = ["py36", "py37", "py38"]
skip-string-normalization = true

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
